--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -26,6 +27,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.24.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
