--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "i18next": "^22.4.10",
     "next": "13.1.6",
     "next-i18next": "^13.1.5",
