started switching to own api - implemented post of beetl and get of beetl and bids

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
@@ -22,7 +23,6 @@
     "i18next": "^22.4.10",
     "next": "13.1.6",
     "next-i18next": "^13.1.5",
-    "pocketbase": "^0.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
